# shorthand-datetime

./: .gitignore  .pre-commit-config.yaml  README.rst  bumpversion.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  cicd.yml
docs/source/: code.rst  conf.py  getting_started.rst
shorthand_datetime/: __init__.py  shorthand.py  version.py
tests/: conftest.py  test_shorthand.py  test_version.py
